<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" >
    <PreferenceCategory
        android:title="@string/pref_category_basic">
        <CheckBoxPreference
            android:key="enabled"
            android:summary="@string/labelEnable"
            android:title="@string/labelEnable"
            android:defaultValue="false" />
    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/pref_category_advanced">
        <CheckBoxPreference
            android:key="extended"
            android:title="@string/labelExtended"
            android:defaultValue="false" />
        <CheckBoxPreference
            android:key="compatibility"
            android:summary="@string/labelCompatibilityToggle"
            android:title="@string/labelCompatibilityToggle"
            android:defaultValue="false" />
        <CheckBoxPreference
            android:key="airplanetoggle"
            android:summary="@string/labelAirplaneToggle"
            android:title="@string/labelAirplaneToggle"
            android:defaultValue="false" />
    </PreferenceCategory>
    <PreferenceCategory
        android:title="@string/pref_category_help">
        <Preference android:title="@string/labelHelp" >
	        <intent android:targetClass="com.antweb.silentboot.HelpActivity"
	            android:targetPackage="com.antweb.silentboot" />
	    </Preference>
    </PreferenceCategory>
</PreferenceScreen>