<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/scrollView1"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:fillViewport="true" >

    <LinearLayout
        android:id="@+id/LinearLayout01"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical" >

        <CheckBox
            android:id="@+id/checkBoxEnable"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_margin="10dip"
            android:checked="false"
            android:paddingLeft="50dip"
            android:text="@string/labelEnable" >
        </CheckBox>

        <CheckBox
            android:id="@+id/checkBoxAirplaneToggle"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_margin="10dip"
            android:checked="false"
            android:paddingLeft="50dip"
            android:text="@string/labelAirplaneToggle" >
        </CheckBox>

        <CheckBox
            android:id="@+id/checkBoxCompatibiblityToggle"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_margin="10dip"
            android:checked="false"
            android:paddingLeft="50dip"
            android:text="@string/labelCompatibilityToggle" >
        </CheckBox>

        <TextView
            android:id="@+id/textStatus"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dip"
            android:gravity="center" >
        </TextView>

        <TextView
            android:id="@+id/textAirplaneStatus"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dip"
            android:gravity="center" >
        </TextView>
    </LinearLayout>

</ScrollView>